adding slideUp to sections

--- a/portfolioStyles.css
+++ b/portfolioStyles.css
@@ -293,7 +293,42 @@ span.answer {
   padding: 5px;
 }
 
+.resumeTableContainerSlide {
+  visibility: hidden;
+}
+
+
 .resumeTable {
+  position: relative;
+  border-top-left-radius: 10px;
+  width: 600px;
+  margin: auto auto;
+  padding: 20px;
+  font-size: 30px;
+  background: rgb(219, 219, 219);
+  height: auto;
+  font-family: 'Montserrat', sans-serif;
+  text-align: left;
+  font-size: 13px;
+  line-height: 13px;
+}
+
+#resumeTable1 {
+  position: relative;
+  border-top-left-radius: 10px;
+  width: 600px;
+  margin: auto auto;
+  padding: 20px;
+  font-size: 30px;
+  background: rgb(219, 219, 219);
+  height: auto;
+  font-family: 'Montserrat', sans-serif;
+  text-align: left;
+  font-size: 13px;
+  line-height: 13px;
+}
+
+#resumeTable2 {
   position: relative;
   border-top-left-radius: 10px;
   width: 600px;
