--- a/navBar.css
+++ b/navBar.css
@@ -1,27 +1,86 @@
-.navbar {
+#navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #111e2a;
     position: fixed;
     bottom: 0;
     width: 100%;
+    font-size: 12px;
 }
 
-.navbar a {
-    float: left;
+#navbar a {
     display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-family: "Montserrat", sans-serif;
 }
 
-.navbar a:hover {
-    background: #f1f1f1;
+#navbar a:hover {
+    background: #9b9b9b;
     color: black;
 }
 
-.navbar a.active {
-    background-color: #04aa6d;
+#navbar a.active {
+    background-color: #9b9b9b;
     color: white;
+}
+
+.NBalignLeft {
+    float: left;
+}
+.NBalignRight {
+    float: right;
+}
+
+.fade-in-image {
+    animation: fadeIn 5s;
+    -webkit-animation: fadeIn 5s;
+    -moz-animation: fadeIn 5s;
+    -o-animation: fadeIn 5s;
+    -ms-animation: fadeIn 5s;
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-ms-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
